test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-trigger/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-delete-trigger
  namespace: default
type: Opaque
