test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-trigger/trigger.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sync-delete-trigger
  namespace: sync-delete-trigger
