test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-trigger/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-delete-trigger
  namespace: sync-delete-trigger
type: Opaque
