test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-trigger/downstream-error.yaml
apiVersion: v1
kind: Secret
metadata:
  name: sync-delete-trigger
  namespace: sync-delete-trigger
