test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-trigger/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: GeneratingPolicy
metadata:
  name: sync-delete-trigger
status:
  conditionStatus:
    conditions:
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    message: ""
    ready: true
