test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-trigger/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: sync-delete-trigger
spec:
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: sync-delete-trigger
  - name: create the source
    try:
    - apply:
        file: source.yaml
  - name: create the namespace
    try:
    - apply:
        file: namespace.yaml
  - name: create the trigger
    try:
    - apply:
        file: trigger.yaml
  - name: check that the downstream is generated
    try:
    - assert:
        file: downstream-assert.yaml
        timeout: 60s
  - name: delete the trigger
    try:
    - delete:
        ref:
          apiVersion: networking.k8s.io/v1
          kind: NetworkPolicy
          name: sync-delete-trigger
          namespace: sync-delete-trigger
  - name: check that the downstream is deleted 
    try:
    - error:
        file: downstream-error.yaml
